IaC/aws-provider/vpc_igw.tf
resource "aws_internet_gateway" "vpc_igw" {
  vpc_id = "${aws_vpc.my_vpc.id}"

  tags = {
    Name = "VPC-IG"
  }
}
